y3/jpp/inter/luna/src/Grammar/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Grammar/Par.y
-----------------------------------------------------------------------------

state 118 contains 1 shift/reduce conflicts.

rule 30 is unused
rule 31 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListStmt                                (4)
	Arg -> Ident ':' Type                              (5)
	Arg -> 'var' Ident ':' Type                        (6)
	ListArg ->                                         (7)
	ListArg -> Arg                                     (8)
	ListArg -> Arg ',' ListArg                         (9)
	Block -> '{' ListStmt '}'                          (10)
	ListStmt ->                                        (11)
	ListStmt -> Stmt ListStmt                          (12)
	Stmt -> ';'                                        (13)
	Stmt -> Block                                      (14)
	Stmt -> DeclKind                                   (15)
	Stmt -> Ident '=' Expr ';'                         (16)
	Stmt -> Ident '++' ';'                             (17)
	Stmt -> Ident '--' ';'                             (18)
	Stmt -> 'return' Expr ';'                          (19)
	Stmt -> 'return' ';'                               (20)
	Stmt -> 'if' '(' Expr ')' Stmt                     (21)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (22)
	Stmt -> 'while' '(' Expr ')' Stmt                  (23)
	Stmt -> 'for' '(' Stmt ';' Expr ';' Stmt ')' Block   (24)
	Stmt -> Expr ';'                                   (25)
	DeclKind -> 'var' Ident ':' Type Item ';'          (26)
	DeclKind -> 'fn' Ident '(' ListArg ')' '->' Type Block   (27)
	Item -> '=' Expr                                   (28)
	Item ->                                            (29)
	ListItem -> Item                                   (30)
	ListItem -> Item ',' ListItem                      (31)
	Type -> 'nil'                                      (32)
	Type -> 'bool'                                     (33)
	Type -> 'int'                                      (34)
	Type -> 'string'                                   (35)
	Type -> 'any'                                      (36)
	Type -> 'fn' '(' ListType ')' '->' Type            (37)
	ListType ->                                        (38)
	ListType -> Type                                   (39)
	ListType -> Type ',' ListType                      (40)
	Expr6 -> Ident                                     (41)
	Expr6 -> Integer                                   (42)
	Expr6 -> 'true'                                    (43)
	Expr6 -> 'false'                                   (44)
	Expr6 -> 'nil'                                     (45)
	Expr6 -> 'any'                                     (46)
	Expr6 -> Ident '(' ListExpr ')'                    (47)
	Expr6 -> String                                    (48)
	Expr6 -> '(' Expr ')'                              (49)
	Expr5 -> '-' Expr6                                 (50)
	Expr5 -> 'not' Expr6                               (51)
	Expr5 -> Expr6                                     (52)
	Expr4 -> Expr4 MulOp Expr5                         (53)
	Expr4 -> Expr5                                     (54)
	Expr3 -> Expr3 AddOp Expr4                         (55)
	Expr3 -> Expr4                                     (56)
	Expr2 -> Expr2 RelOp Expr3                         (57)
	Expr2 -> Expr3                                     (58)
	Expr1 -> Expr2 'and' Expr1                         (59)
	Expr1 -> Expr2                                     (60)
	Expr -> Expr1 'or' Expr                            (61)
	Expr -> 'fn' '(' ListArg ')' '=>' Type Block       (62)
	Expr -> Expr1                                      (63)
	ListExpr ->                                        (64)
	ListExpr -> Expr                                   (65)
	ListExpr -> Expr ',' ListExpr                      (66)
	AddOp -> '+'                                       (67)
	AddOp -> '-'                                       (68)
	MulOp -> '*'                                       (69)
	MulOp -> '/'                                       (70)
	MulOp -> '%'                                       (71)
	RelOp -> '<'                                       (72)
	RelOp -> '<='                                      (73)
	RelOp -> '>'                                       (74)
	RelOp -> '>='                                      (75)
	RelOp -> '=='                                      (76)
	RelOp -> '!='                                      (77)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'--'           { PT _ (TS _ 10) }
	'->'           { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	':'            { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'=>'           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'and'          { PT _ (TS _ 22) }
	'any'          { PT _ (TS _ 23) }
	'bool'         { PT _ (TS _ 24) }
	'else'         { PT _ (TS _ 25) }
	'false'        { PT _ (TS _ 26) }
	'fn'           { PT _ (TS _ 27) }
	'for'          { PT _ (TS _ 28) }
	'if'           { PT _ (TS _ 29) }
	'int'          { PT _ (TS _ 30) }
	'nil'          { PT _ (TS _ 31) }
	'not'          { PT _ (TS _ 32) }
	'or'           { PT _ (TS _ 33) }
	'return'       { PT _ (TS _ 34) }
	'string'       { PT _ (TS _ 35) }
	'true'         { PT _ (TS _ 36) }
	'var'          { PT _ (TS _ 37) }
	'while'        { PT _ (TS _ 38) }
	'{'            { PT _ (TS _ 39) }
	'}'            { PT _ (TS _ 40) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Arg             rules 5, 6
	ListArg         rules 7, 8, 9
	Block           rule  10
	ListStmt        rules 11, 12
	Stmt            rules 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25
	DeclKind        rules 26, 27
	Item            rules 28, 29
	ListItem        rules 30, 31
	Type            rules 32, 33, 34, 35, 36, 37
	ListType        rules 38, 39, 40
	Expr6           rules 41, 42, 43, 44, 45, 46, 47, 48, 49
	Expr5           rules 50, 51, 52
	Expr4           rules 53, 54
	Expr3           rules 55, 56
	Expr2           rules 57, 58
	Expr1           rules 59, 60
	Expr            rules 61, 62, 63
	ListExpr        rules 64, 65, 66
	AddOp           rules 67, 68
	MulOp           rules 69, 70, 71
	RelOp           rules 72, 73, 74, 75, 76, 77

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'('            shift, and enter state 18
	'-'            shift, and enter state 19
	';'            shift, and enter state 20
	'any'          shift, and enter state 21
	'false'        shift, and enter state 22
	'fn'           shift, and enter state 23
	'for'          shift, and enter state 24
	'if'           shift, and enter state 25
	'nil'          shift, and enter state 26
	'not'          shift, and enter state 27
	'return'       shift, and enter state 28
	'true'         shift, and enter state 29
	'var'          shift, and enter state 30
	'while'        shift, and enter state 31
	'{'            shift, and enter state 32
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 33
	L_quoted       shift, and enter state 34
	%eof           reduce using rule 11

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Program        goto state 6
	Block          goto state 7
	ListStmt       goto state 8
	Stmt           goto state 9
	DeclKind       goto state 10
	Expr6          goto state 11
	Expr5          goto state 12
	Expr4          goto state 13
	Expr3          goto state 14
	Expr2          goto state 15
	Expr1          goto state 16
	Expr           goto state 17

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'and'          reduce using rule 1
	'or'           reduce using rule 1


State 3

	Stmt -> Ident . '=' Expr ';'                        (rule 16)
	Stmt -> Ident . '++' ';'                            (rule 17)
	Stmt -> Ident . '--' ';'                            (rule 18)
	Expr6 -> Ident .                                    (rule 41)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 47)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'('            shift, and enter state 67
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	'++'           shift, and enter state 68
	'-'            reduce using rule 41
	'--'           shift, and enter state 69
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'='            shift, and enter state 70
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'and'          reduce using rule 41
	'or'           reduce using rule 41


State 4

	Expr6 -> Integer .                                  (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'and'          reduce using rule 42
	'or'           reduce using rule 42


State 5

	Expr6 -> String .                                   (rule 48)

	'!='           reduce using rule 48
	'%'            reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'and'          reduce using rule 48
	'or'           reduce using rule 48


State 6

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 7

	Stmt -> Block .                                     (rule 14)

	'('            reduce using rule 14
	')'            reduce using rule 14
	'-'            reduce using rule 14
	';'            reduce using rule 14
	'any'          reduce using rule 14
	'else'         reduce using rule 14
	'false'        reduce using rule 14
	'fn'           reduce using rule 14
	'for'          reduce using rule 14
	'if'           reduce using rule 14
	'nil'          reduce using rule 14
	'not'          reduce using rule 14
	'return'       reduce using rule 14
	'true'         reduce using rule 14
	'var'          reduce using rule 14
	'while'        reduce using rule 14
	'{'            reduce using rule 14
	'}'            reduce using rule 14
	L_Ident        reduce using rule 14
	L_integ        reduce using rule 14
	L_quoted       reduce using rule 14
	%eof           reduce using rule 14


State 8

	Program -> ListStmt .                               (rule 4)

	%eof           reduce using rule 4


State 9

	ListStmt -> Stmt . ListStmt                         (rule 12)

	'('            shift, and enter state 18
	'-'            shift, and enter state 19
	';'            shift, and enter state 20
	'any'          shift, and enter state 21
	'false'        shift, and enter state 22
	'fn'           shift, and enter state 23
	'for'          shift, and enter state 24
	'if'           shift, and enter state 25
	'nil'          shift, and enter state 26
	'not'          shift, and enter state 27
	'return'       shift, and enter state 28
	'true'         shift, and enter state 29
	'var'          shift, and enter state 30
	'while'        shift, and enter state 31
	'{'            shift, and enter state 32
	'}'            reduce using rule 11
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 33
	L_quoted       shift, and enter state 34
	%eof           reduce using rule 11

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Block          goto state 7
	ListStmt       goto state 66
	Stmt           goto state 9
	DeclKind       goto state 10
	Expr6          goto state 11
	Expr5          goto state 12
	Expr4          goto state 13
	Expr3          goto state 14
	Expr2          goto state 15
	Expr1          goto state 16
	Expr           goto state 17

State 10

	Stmt -> DeclKind .                                  (rule 15)

	'('            reduce using rule 15
	')'            reduce using rule 15
	'-'            reduce using rule 15
	';'            reduce using rule 15
	'any'          reduce using rule 15
	'else'         reduce using rule 15
	'false'        reduce using rule 15
	'fn'           reduce using rule 15
	'for'          reduce using rule 15
	'if'           reduce using rule 15
	'nil'          reduce using rule 15
	'not'          reduce using rule 15
	'return'       reduce using rule 15
	'true'         reduce using rule 15
	'var'          reduce using rule 15
	'while'        reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	L_Ident        reduce using rule 15
	L_integ        reduce using rule 15
	L_quoted       reduce using rule 15
	%eof           reduce using rule 15


State 11

	Expr5 -> Expr6 .                                    (rule 52)

	'!='           reduce using rule 52
	'%'            reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	'and'          reduce using rule 52
	'or'           reduce using rule 52


State 12

	Expr4 -> Expr5 .                                    (rule 54)

	'!='           reduce using rule 54
	'%'            reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'and'          reduce using rule 54
	'or'           reduce using rule 54


State 13

	Expr4 -> Expr4 . MulOp Expr5                        (rule 53)
	Expr3 -> Expr4 .                                    (rule 56)

	'!='           reduce using rule 56
	'%'            shift, and enter state 63
	')'            reduce using rule 56
	'*'            shift, and enter state 64
	'+'            reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'/'            shift, and enter state 65
	';'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'=='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'and'          reduce using rule 56
	'or'           reduce using rule 56

	MulOp          goto state 62

State 14

	Expr3 -> Expr3 . AddOp Expr4                        (rule 55)
	Expr2 -> Expr3 .                                    (rule 58)

	'!='           reduce using rule 58
	')'            reduce using rule 58
	'+'            shift, and enter state 60
	','            reduce using rule 58
	'-'            shift, and enter state 61
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	'and'          reduce using rule 58
	'or'           reduce using rule 58

	AddOp          goto state 59

State 15

	Expr2 -> Expr2 . RelOp Expr3                        (rule 57)
	Expr1 -> Expr2 . 'and' Expr1                        (rule 59)
	Expr1 -> Expr2 .                                    (rule 60)
